--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1><span class="book-icon">📋</span> <strong>Playbook Sesión 1B 5to Primaria</strong></h1>
+        <h1><span class="book-icon">📋</span> <strong>Playbook Sesión 2B 5to Primaria</strong></h1>
         <div class="header-widgets">
             <div class="timer-container">
                 <span id="timer">⏱️ 00:00</span>
@@ -105,6 +105,7 @@
                                                 <li>Tener los kits Nezha Pro Sports listos y organizados.</li>
                                                 <li>Tener la presentación de diapositivas (1-10) lista y en orden.</li>
                                                 <li>Preparar imágenes de ensambles básicos de chasis para proyectar.</li>
+                                                <li>Asegurarse de que los estudiantes tengan una forma de guardar su trabajo en MakeCode, ya sea a través de cuentas o descargando los archivos .hex.</li>
                                             </ul>
                                         </li>
                                         <li><strong>Familiarización:</strong> Revisar el flujo de la sesión, los diálogos y los tiempos.</li>
@@ -129,7 +130,7 @@
                         <div class="collapsible">
                             <button type="button" class="collapsible-button">Diálogo Sugerido</button>
                             <div class="collapsible-content">
-                                <p class="dialogue assistant">¡Hola, equipos de ingenieros! Antes de empezar a construir, vamos a activar a nuestro copiloto, Xolo. Por favor, salúdenlo en el chat, díganle su nombre y sus intereses. Por ejemplo: <strong>'Hola Xolo, soy Gabriel y me gusta la electrónica.'</strong>.</p>
+                                <p class="dialogue assistant">¡Hola, equipos de ingenieros e ingenieras! Antes de empezar a construir, vamos a activar a nuestro copiloto, Xolo. Por favor, salúdenlo en el chat, díganle su nombre y sus intereses. Por ejemplo: <strong>'Hola Xolo, soy Gabriel y me gusta la electrónica.'</strong>.</p>
                             </div>
                         </div>
                     </div>
@@ -166,25 +167,25 @@
                     </div>
                     <div class="step-card">
                         <div class="step-content">
-                            <h3>Paso 2: Inspiración Visual ⏰ 1 minuto</h3>
-                            <p>(Proyectar Diapositiva 4) Mostrar imágenes de chasis básicos para inspirar la construcción.</p>
-                        </div>
-                        <div class="collapsible">
-                            <button type="button" class="collapsible-button">Diálogo Sugerido</button>
-                            <div class="collapsible-content">
-                                <p class="dialogue assistant">Para darles una chispa de inspiración, aquí tienen algunas ideas visuales. Miren estas imágenes de cómo podrían empezar a construir la estructura para sus motores y ruedas.</p>
-                            </div>
-                        </div>
-                    </div>
-                     <div class="step-card">
-                        <div class="step-content">
-                            <h3>Paso 3: "I Can Statement" ⏰ 2 minutos</h3>
+                             <h3>Paso 2: "I Can Statement" ⏰ 2 minutos</h3>
                             <p>(Proyectar Diapositiva 3) Presentar el objetivo concreto de la sesión.</p>
                         </div>
                         <div class="collapsible">
                             <button type="button" class="collapsible-button">Diálogo Sugerido</button>
                             <div class="collapsible-content">
                                 <p class="dialogue assistant">Luego, con la ayuda de Xolo para el código, van a programar esos primeros movimientos. Al final de la clase, podrán decir: <strong>'Mi equipo construyó un robot Nezha básico y logramos que se mueva como lo planeamos usando nuestro plan.'</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="step-card">
+                        <div class="step-content">
+                            <h3>Paso 3: Inspiración Visual ⏰ 1 minuto</h3>
+                            <p>(Proyectar Diapositiva 4) Mostrar imágenes de chasis básicos para inspirar la construcción.</p>
+                        </div>
+                        <div class="collapsible">
+                            <button type="button" class="collapsible-button">Diálogo Sugerido</button>
+                            <div class="collapsible-content">
+                                <p class="dialogue assistant">Para darles una chispa de inspiración, aquí tienen algunas ideas visuales. Miren estas imágenes... Estas estructuras, que llamamos 'chasis', son como el esqueleto de nuestro robot, donde montaremos los motores y las ruedas.</p>
                             </div>
                         </div>
                     </div>
@@ -255,7 +256,13 @@ POR SIEMPRE:
                     </div>
                     <div class="step-card">
                         <div class="step-content">
-                            <h3>Paso 2: Implementación y Prueba ⏰ 5 minutos</h3>
+                            <h3>Paso 2.5: Del Plan al Código (3 min)</h3>
+                            <p>Proyecta tu pantalla con MakeCode (makecode.microbit.org). Modela cómo traducir una o dos líneas del plan de Xolo a bloques de código. 'Miren, el plan dice nezha_motor_M1_velocidad(50). En MakeCode, eso se ve así...'.</p>
+                        </div>
+                    </div>
+                    <div class="step-card">
+                        <div class="step-content">
+                            <h3>Paso 3: Implementación y Prueba ⏰ 5 minutos</h3>
                             <p>Los equipos traducen su plan a bloques y realizan las primeras pruebas.</p>
                         </div>
                         <div class="collapsible">
@@ -267,7 +274,7 @@ POR SIEMPRE:
                     </div>
                     <div class="step-card">
                         <div class="step-content">
-                            <h3>Paso 3: Depuración y Mejoras ⏰ 5 minutos</h3>
+                            <h3>Paso 4: Depuración y Mejoras ⏰ 5 minutos</h3>
                             <p>(Proyectar Diapositiva 8) Guiar a los equipos en el proceso de solución de problemas.</p>
                         </div>
                         <div class="collapsible">
@@ -319,7 +326,7 @@ POR SIEMPRE:
                         <div class="collapsible">
                             <button type="button" class="collapsible-button">Diálogo Sugerido</button>
                             <div class="collapsible-content">
-                                <p class="dialogue assistant">¡Increíble trabajo construyendo y programando sus primeros robots Nezha! Ya pueden controlar su movimiento básico. En la próxima unidad, exploraremos cómo añadirle mecanismos más precisos con servomotores. ¡Felicidades, ingenieros!</p>
+                                <p class="dialogue assistant">¡Increíble trabajo construyendo y programando sus primeros robots Nezha! Ya pueden controlar su movimiento básico. En la próxima unidad, exploraremos cómo añadirle mecanismos más precisos con servomotores. ¡Felicidades a todas y todos!</p>
                             </div>
                         </div>
                     </div>
